chore: exclude platform from root tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
         "skipLibCheck": true,
         "outDir": "./dist",
         "rootDir": "./src"
-    }
+    },
+    "exclude": [
+        "platform",
+        "node_modules"
+    ]
 }
