--- a/platform/.env
+++ b/platform/.env
@@ -1,5 +1,7 @@
 DATABASE_URL="postgresql://gen_user:%3C%24IQb~D7%3C%3DrQWI@85.239.53.236:5432/default_db?schema=public"
 AUTH_SECRET="2SE/Sq42YhJa3EdcC5BnF10QWjjOOt7Se9977gjFOpA="
+# Optional: canonical URL in production (e.g. https://olynero.com or https://www.olynero.com)
+AUTH_URL="https://olynero.com"
 
 #GITHUB_ID=your_client_id
 #GITHUB_SECRET=your_client_secret
