Add GitHub credentials to .env

--- a/platform/.env
+++ b/platform/.env
@@ -3,5 +3,7 @@ AUTH_SECRET="2SE/Sq42YhJa3EdcC5BnF10QWjjOOt7Se9977gjFOpA="
 # Optional: canonical URL in production (e.g. https://olynero.com or https://www.olynero.com)
 AUTH_URL="https://olynero.com"
 
-#GITHUB_ID=your_client_id
-#GITHUB_SECRET=your_client_secret
+# GitHub: create "OAuth App" (not "GitHub App") at https://github.com/settings/developers
+# Callback URL exactly: https://olynero.com/api/auth/callback/github (no trailing space!)
+GITHUB_ID="Ov23liVAu1glLBRMiwSr"
+GITHUB_SECRET="c9e5918722f429a796f67a472bc0d83fe4030948"
