--- a/platform/package.json
+++ b/platform/package.json
@@ -12,6 +12,8 @@
     "@ai-sdk/google": "^3.0.29",
     "@ai-sdk/react": "^3.0.88",
     "@auth/prisma-adapter": "^2.11.1",
+    "@aws-sdk/client-s3": "^3.990.0",
+    "@aws-sdk/lib-storage": "^3.990.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
